// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gatsby-remark-code-repls Babel remark transform generates a link for files in nested directories 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "html",
          "value": "<a href=\\"https://babeljs.io/repl/#?presets=react&code_lz=MYewdgzgLgBAZiEMC8MBEAjAhgJzQbiA\\" >REPL</a>",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 35,
          "line": 1,
          "offset": 34,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 35,
      "line": 1,
      "offset": 34,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-code-repls Babel remark transform generates a link for the specified example file 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "html",
          "value": "<a href=\\"https://babeljs.io/repl/#?presets=react&code_lz=MYewdgzgLgBAZiEMC8MBEAjAhgJzQbiA\\" >REPL</a>",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 20,
          "line": 1,
          "offset": 19,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 20,
      "line": 1,
      "offset": 19,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-code-repls Babel remark transform generates a link with the specified default text 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "html",
          "value": "<a href=\\"https://babeljs.io/repl/#?presets=react&code_lz=MYewdgzgLgBAZiEMC8MBEAjAhgJzQbiA\\" >Click me</a>",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 20,
          "line": 1,
          "offset": 19,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 20,
      "line": 1,
      "offset": 19,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-code-repls Babel remark transform generates a link with the specified inline text even if default text is specified 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "html",
          "value": "<a href=\\"https://babeljs.io/repl/#?presets=react&code_lz=MYewdgzgLgBAZiEMC8MBEAjAhgJzQbiA\\" >Custom link text</a>",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 36,
          "line": 1,
          "offset": 35,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 36,
      "line": 1,
      "offset": 35,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-code-repls Babel remark transform generates a link with the specified target 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "html",
          "value": "<a href=\\"https://babeljs.io/repl/#?presets=react&code_lz=MYewdgzgLgBAZiEMC8MBEAjAhgJzQbiA\\" target=\\"_blank\\" rel=\\"noreferrer\\">REPL</a>",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 20,
          "line": 1,
          "offset": 19,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 20,
      "line": 1,
      "offset": 19,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-code-repls CodeSandbox remark transform generates a link for files in nested directories 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "html",
          "value": "<a href=\\"https://codesandbox.io/api/v1/sandboxes/define?parameters=N4IgZglgNgpgziAXKADgQwMYGs0HMYB0AVnAPYB2SoGFALjObVSACYwoNvkYTxUC-AGhABbNBEqIQ6WgAsA9LVLzy8ei3mRYxBPyEgJbAB4FZtEVGY1GDJlIA8LCADcABBBYBeADogATqSktL4AfPbyTs4hIPoyCkoqajAaWoQkVnS2SCDWcLSuYIGunq6-AEZofr4A3DF6QA\\" >REPL</a>",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 41,
          "line": 1,
          "offset": 40,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 41,
      "line": 1,
      "offset": 40,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-code-repls CodeSandbox remark transform generates a link for the specified example file 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "html",
          "value": "<a href=\\"https://codesandbox.io/api/v1/sandboxes/define?parameters=N4IgZglgNgpgziAXKADgQwMYGs0HMYB0AVnAPYB2SoGFALjObVSACYwoNvkYTxUC-AGhABbNBEqJw0QiRD8hICWwAeBABa0RUZjUYMmUgDwsIANwAEEFgF4AOiABOpUrQcA-IwHpTZ9_OFIWGIEZBA9ekYkcIo4WgswFwsbCwcAIzRHBwBueQUgA\\" >REPL</a>",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 26,
          "line": 1,
          "offset": 25,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 26,
      "line": 1,
      "offset": 25,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-code-repls CodeSandbox remark transform generates a link with the specified default text 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "html",
          "value": "<a href=\\"https://codesandbox.io/api/v1/sandboxes/define?parameters=N4IgZglgNgpgziAXKADgQwMYGs0HMYB0AVnAPYB2SoGFALjObVSACYwoNvkYTxUC-AGhABbNBEqJw0QiRD8hICWwAeBABa0RUZjUYMmUgDwsIANwAEEFgF4AOiABOpUrQcA-IwHpTZ9_OFIWGIEZBA9ekYkcIo4WgswFwsbCwcAIzRHBwBueQUgA\\" >Click me</a>",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 26,
          "line": 1,
          "offset": 25,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 26,
      "line": 1,
      "offset": 25,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-code-repls CodeSandbox remark transform generates a link with the specified inline text even if default text is specified 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "html",
          "value": "<a href=\\"https://codesandbox.io/api/v1/sandboxes/define?parameters=N4IgZglgNgpgziAXKADgQwMYGs0HMYB0AVnAPYB2SoGFALjObVSACYwoNvkYTxUC-AGhABbNBEqJw0QiRD8hICWwAeBABa0RUZjUYMmUgDwsIANwAEEFgF4AOiABOpUrQcA-IwHpTZ9_OFIWGIEZBA9ekYkcIo4WgswFwsbCwcAIzRHBwBueQUgA\\" >Custom link text</a>",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 42,
          "line": 1,
          "offset": 41,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 42,
      "line": 1,
      "offset": 41,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-code-repls CodeSandbox remark transform generates a link with the specified target 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "html",
          "value": "<a href=\\"https://codesandbox.io/api/v1/sandboxes/define?parameters=N4IgZglgNgpgziAXKADgQwMYGs0HMYB0AVnAPYB2SoGFALjObVSACYwoNvkYTxUC-AGhABbNBEqJw0QiRD8hICWwAeBABa0RUZjUYMmUgDwsIANwAEEFgF4AOiABOpUrQcA-IwHpTZ9_OFIWGIEZBA9ekYkcIo4WgswFwsbCwcAIzRHBwBueQUgA\\" target=\\"_blank\\" rel=\\"noreferrer\\">REPL</a>",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 26,
          "line": 1,
          "offset": 25,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 26,
      "line": 1,
      "offset": 25,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-code-repls CodeSandbox remark transform supports custom dependencies config option for NPM module dependencies 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "html",
          "value": "<a href=\\"https://codesandbox.io/api/v1/sandboxes/define?parameters=N4IgZglgNgpgziAXKADgQwMYGs0HMYB0AVnAPYB2SoGFALjObVSACYwoNvkYTzMBOMTE0QgoaenCYAaEIOEBaFqQC2SEORgAPGSBT9SKBbQCeHBKICMAVgLWQsgAIAjNM5hQA9DUHqA7AQALAQADCAAvrIqaBCUoui0ABaetKSemlIwLJ6QsMQI4ZEgsWxaBIm0KlDMNIwMIiAAPCwQAG4ABBAsALwAOnKkpLT9AHyNni2tIxGyCcmp6fD02bmEJDV09eq1Uu1gg-3d7f2u_P0A3BGFQA\\" >REPL</a>",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 41,
          "line": 1,
          "offset": 40,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 41,
      "line": 1,
      "offset": 40,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-code-repls CodeSandbox remark transform supports custom html config option for index html 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "html",
          "value": "<a href=\\"https://codesandbox.io/api/v1/sandboxes/define?parameters=N4IgZglgNgpgziAXKADgQwMYGs0HMYB0AVnAPYB2SoGFALjObVSACYwoNvkYTxUC-AGhABbNBEqIQ6WgAsA9LVLzy8ei3mRYxBPyEgJbAB4FZtEVGY1GDJlIA8cdOQAEEFgF4AOuFKkfAHz28k5o5AEg-jIKSipqMBpahCRWdLZIINZwtC5gfi4eLj4ARmgATj4A3JF6QA\\" >REPL</a>",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 41,
          "line": 1,
          "offset": 40,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 41,
      "line": 1,
      "offset": 40,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-code-repls CodeSandbox remark transform supports importing multiple files 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "html",
          "value": "<a href=\\"https://codesandbox.io/api/v1/sandboxes/define?parameters=N4IgZglgNgpgziAXKADgQwMYGs0HMYB0AVnAPYB2SoGFALjObVSACYwoNvkYTxUC-AGhABbNBEqIQ6WgAsA9LVLzy8ei3mRYxBPyEgJbAB4FZtEVGY1GDJlIA8LCADcABBBYBeADogATqSktL4AfPbyTs4hIPoyCkoqajAaWoQkVnS2SCDWcLSuYIGunq6-AEZofr4A3DHCcYrKqnnJ8mjkQbIwfgBi0GkIyDmZjNm5-YWkxaUgFVUgtbFoco2JLSn9BBhwg9QjdsPkeQVFJeWVNTF6QA\\" >REPL</a>",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 95,
          "line": 1,
          "offset": 94,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 95,
      "line": 1,
      "offset": 94,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-code-repls Codepen remark transform generates a link for files in nested directories 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "html",
          "value": "<a href=\\"/redirect-to-codepen/path/to/nested/file.js\\" >REPL</a>",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 37,
          "line": 1,
          "offset": 36,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 37,
      "line": 1,
      "offset": 36,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-code-repls Codepen remark transform generates a link for the specified example file 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "html",
          "value": "<a href=\\"/redirect-to-codepen/file.js\\" >REPL</a>",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 22,
          "line": 1,
          "offset": 21,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 22,
      "line": 1,
      "offset": 21,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-code-repls Codepen remark transform generates a link with the specified default text 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "html",
          "value": "<a href=\\"/redirect-to-codepen/file.js\\" >Click me</a>",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 22,
          "line": 1,
          "offset": 21,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 22,
      "line": 1,
      "offset": 21,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-code-repls Codepen remark transform generates a link with the specified inline text even if default text is specified 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "html",
          "value": "<a href=\\"/redirect-to-codepen/file.js\\" >Custom link text</a>",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 38,
          "line": 1,
          "offset": 37,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 38,
      "line": 1,
      "offset": 37,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-code-repls Codepen remark transform generates a link with the specified target 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "html",
          "value": "<a href=\\"/redirect-to-codepen/file.js\\" target=\\"_blank\\" rel=\\"noreferrer\\">REPL</a>",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 22,
          "line": 1,
          "offset": 21,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 22,
      "line": 1,
      "offset": 21,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-code-repls Ramda remark transform generates a link for files in nested directories 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "html",
          "value": "<a href=\\"http://ramdajs.com/repl/#?const%20foo%20%3D%20%22bar%22%3B\\" >REPL</a>",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 35,
          "line": 1,
          "offset": 34,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 35,
      "line": 1,
      "offset": 34,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-code-repls Ramda remark transform generates a link for the specified example file 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "html",
          "value": "<a href=\\"http://ramdajs.com/repl/#?const%20foo%20%3D%20%22bar%22%3B\\" >REPL</a>",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 20,
          "line": 1,
          "offset": 19,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 20,
      "line": 1,
      "offset": 19,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-code-repls Ramda remark transform generates a link with the specified default text 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "html",
          "value": "<a href=\\"http://ramdajs.com/repl/#?const%20foo%20%3D%20%22bar%22%3B\\" >Click me</a>",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 20,
          "line": 1,
          "offset": 19,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 20,
      "line": 1,
      "offset": 19,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-code-repls Ramda remark transform generates a link with the specified inline text even if default text is specified 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "html",
          "value": "<a href=\\"http://ramdajs.com/repl/#?const%20foo%20%3D%20%22bar%22%3B\\" >Custom link text</a>",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 36,
          "line": 1,
          "offset": 35,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 36,
      "line": 1,
      "offset": 35,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-code-repls Ramda remark transform generates a link with the specified target 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "html",
          "value": "<a href=\\"http://ramdajs.com/repl/#?const%20foo%20%3D%20%22bar%22%3B\\" target=\\"_blank\\" rel=\\"noreferrer\\">REPL</a>",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 20,
          "line": 1,
          "offset": 19,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 20,
      "line": 1,
      "offset": 19,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-code-repls StackBlitz remark transform generates a link for files in nested directories 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "html",
          "value": "
          <form id=\\"sb_hidden_forma38e1368-812c-4c96-8b83-d7840462920b\\" method=\\"post\\" action=\\"https://stackblitz.com/run\\" target=\\"_self\\">
            
             <input type=\\"hidden\\" name=\\"project[files][path/to/nested/file.js]\\" value=\\"const foo = &#34;bar&#34;;\\">
          
            <input type=\\"hidden\\" name=\\"project[dependencies]\\" value=\\"[object Object]\\">
            <input type=\\"hidden\\" name=\\"project[template]\\" value=\\"javascript\\">
          </form>
          <a href=\\"https://stackblitz.com/run\\" onclick=\\"event.preventDefault();document.getElementById('sb_hidden_forma38e1368-812c-4c96-8b83-d7840462920b').submit()\\">REPL</a>
          ",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 40,
          "line": 1,
          "offset": 39,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 40,
      "line": 1,
      "offset": 39,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-code-repls StackBlitz remark transform generates a link for the specified example file 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "html",
          "value": "
          <form id=\\"sb_hidden_formcfc6edf7-a7a6-401b-a748-a6d5e7825293\\" method=\\"post\\" action=\\"https://stackblitz.com/run\\" target=\\"_self\\">
            
             <input type=\\"hidden\\" name=\\"project[files][file.js]\\" value=\\"const foo = &#34;bar&#34;;\\">
          
            <input type=\\"hidden\\" name=\\"project[dependencies]\\" value=\\"[object Object]\\">
            <input type=\\"hidden\\" name=\\"project[template]\\" value=\\"javascript\\">
          </form>
          <a href=\\"https://stackblitz.com/run\\" onclick=\\"event.preventDefault();document.getElementById('sb_hidden_formcfc6edf7-a7a6-401b-a748-a6d5e7825293').submit()\\">REPL</a>
          ",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 25,
          "line": 1,
          "offset": 24,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 25,
      "line": 1,
      "offset": 24,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-code-repls StackBlitz remark transform generates a link with the specified default text 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "html",
          "value": "
          <form id=\\"sb_hidden_form37cecf0e-c812-47cf-9bf5-0db83963ffc3\\" method=\\"post\\" action=\\"https://stackblitz.com/run\\" target=\\"_self\\">
            
             <input type=\\"hidden\\" name=\\"project[files][file.js]\\" value=\\"const foo = &#34;bar&#34;;\\">
          
            <input type=\\"hidden\\" name=\\"project[dependencies]\\" value=\\"[object Object]\\">
            <input type=\\"hidden\\" name=\\"project[template]\\" value=\\"javascript\\">
          </form>
          <a href=\\"https://stackblitz.com/run\\" onclick=\\"event.preventDefault();document.getElementById('sb_hidden_form37cecf0e-c812-47cf-9bf5-0db83963ffc3').submit()\\">Click me</a>
          ",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 25,
          "line": 1,
          "offset": 24,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 25,
      "line": 1,
      "offset": 24,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-code-repls StackBlitz remark transform generates a link with the specified inline text even if default text is specified 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "html",
          "value": "
          <form id=\\"sb_hidden_form21b8ffef-61b8-4a91-825f-392edf53641a\\" method=\\"post\\" action=\\"https://stackblitz.com/run\\" target=\\"_self\\">
            
             <input type=\\"hidden\\" name=\\"project[files][file.js]\\" value=\\"const foo = &#34;bar&#34;;\\">
          
            <input type=\\"hidden\\" name=\\"project[dependencies]\\" value=\\"[object Object]\\">
            <input type=\\"hidden\\" name=\\"project[template]\\" value=\\"javascript\\">
          </form>
          <a href=\\"https://stackblitz.com/run\\" onclick=\\"event.preventDefault();document.getElementById('sb_hidden_form21b8ffef-61b8-4a91-825f-392edf53641a').submit()\\">Custom link text</a>
          ",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 41,
          "line": 1,
          "offset": 40,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 41,
      "line": 1,
      "offset": 40,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-code-repls StackBlitz remark transform generates a link with the specified target 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "html",
          "value": "
          <form id=\\"sb_hidden_form4c4223ef-784b-4f9d-82f4-596a99d28bcc\\" method=\\"post\\" action=\\"https://stackblitz.com/run\\" target=\\"_blank\\" rel=\\"noreferrer\\">
            
             <input type=\\"hidden\\" name=\\"project[files][file.js]\\" value=\\"const foo = &#34;bar&#34;;\\">
          
            <input type=\\"hidden\\" name=\\"project[dependencies]\\" value=\\"[object Object]\\">
            <input type=\\"hidden\\" name=\\"project[template]\\" value=\\"javascript\\">
          </form>
          <a href=\\"https://stackblitz.com/run\\" onclick=\\"event.preventDefault();document.getElementById('sb_hidden_form4c4223ef-784b-4f9d-82f4-596a99d28bcc').submit()\\">REPL</a>
          ",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 25,
          "line": 1,
          "offset": 24,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 25,
      "line": 1,
      "offset": 24,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;

exports[`gatsby-remark-code-repls StackBlitz remark transform supports importing multiple files 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "type": "html",
          "value": "
          <form id=\\"sb_hidden_form5a397345-c8c7-49b9-80a4-2c462a80cd7b\\" method=\\"post\\" action=\\"https://stackblitz.com/run\\" target=\\"_self\\">
            
             <input type=\\"hidden\\" name=\\"project[files][path/to/nested/file.js]\\" value=\\"const foo = &#34;bar&#34;;\\">
          

             <input type=\\"hidden\\" name=\\"project[files][path/to/nested/anotherFile.js]\\" value=\\"const foo = &#34;bar&#34;;\\">
          

             <input type=\\"hidden\\" name=\\"project[files][path/to/nested/file.css]\\" value=\\"const foo = &#34;bar&#34;;\\">
          
            <input type=\\"hidden\\" name=\\"project[dependencies]\\" value=\\"[object Object]\\">
            <input type=\\"hidden\\" name=\\"project[template]\\" value=\\"javascript\\">
          </form>
          <a href=\\"https://stackblitz.com/run\\" onclick=\\"event.preventDefault();document.getElementById('sb_hidden_form5a397345-c8c7-49b9-80a4-2c462a80cd7b').submit()\\">REPL</a>
          ",
        },
      ],
      "position": Position {
        "end": Object {
          "column": 94,
          "line": 1,
          "offset": 93,
        },
        "indent": Array [],
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "paragraph",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 94,
      "line": 1,
      "offset": 93,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "root",
}
`;
